# lantern

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: game-submission.md
.github/workflows/: build.yml  deploy-website.yml
docs/: BUG_JOURNAL.md  ENGINE.md  PACKAGE.md  WICK.md
games/demo/: main.lua
games/hello_c/: main.c
games/room/: main.lua
games/showcase/: main.lua
games/showcase_wick/: game.info  main.wick
games/stress/: main.lua
games/template/: main.lua
games/touchdemo/: main.c
games/wicklab/: main.wick
include/: lantern.h
ios/: Info.plist  main.mm
site/: 404.html  CNAME  README.md  index.html  robots.txt  sitemap.xml  style.css
site/docs/: index.html
site/store/: index.html
src/: audio.cpp  audio.hpp  engine.cpp  gfx.cpp  gfx.hpp  lantern_font.h  lantern_math.h  main.cpp  obj.cpp  obj.hpp  package.cpp  package.hpp  path_sandbox.cpp  path_sandbox.hpp  platform.hpp  platform_ios.h  platform_ios.mm  platform_sdl.cpp  wick_host.cpp  wick_host.hpp
tests/: kora_kitchen_shot_test.sh  package_test.sh  path_sandbox_test.sh  touch_test.c  wick_test.sh
tools/: build_ios_sim.sh  gen_demo_assets.py  gen_font.py  gen_room_assets.py  gen_showcase_assets.py  make_dist.sh  pack_main.cpp
wick/: wick.hpp  wick_front.cpp  wick_internal.hpp  wick_vm.cpp
